--- a/src/componentes/Banner/Banner.css
+++ b/src/componentes/Banner/Banner.css
@@ -1,9 +1,9 @@
 .banner {
-    background-color: #6278f7;
+    background-color: #d321d3;
     text-align: center;
 }
 
 .banner img{
-    max-width: 100%;
+    max-width: 50%;
 }
 
