--- a/src/componentes/Times/Time.css
+++ b/src/componentes/Times/Time.css
@@ -1,13 +1,13 @@
 .time {
     text-align: center;
     padding: 32px;
-    background-color: rgb(238, 245, 174);
+    
 }
 
 .time h3 {
 
     font-size: 32px;
-    border-bottom: 4px solid #eeff01;
+    border-bottom: 4px solid ;
     display: inline-block;
     padding-bottom: 8px;
 
