--- a/src/componentes/Times/Time.css
+++ b/src/componentes/Times/Time.css
@@ -12,3 +12,10 @@
     padding-bottom: 8px;
 
 }
+
+.time .colaboradores {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 32px;
+    flex-wrap: wrap;
+}
